Fix dark mode logo

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,3 +1,13 @@
 .logo {
   margin-bottom: 32px;
 }
+
+.logo svg path {
+  fill: rgb(var(--foreground-rgb));
+}
+
+@media (prefers-color-scheme: dark) {
+  .logo svg path {
+    fill: rgb(var(--foreground-rgb));
+  }
+}
